--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container{
+  display:flex;
+  
+  justify-content:space-around;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .item{
+      margin:5px;
+   
+      padding:6px;
+  
+     
+    
   }
-  to {
-    transform: rotate(360deg);
+  .logo{
+      background-image:url('/src/images/logo.png');
+  flex:1;
   }
-}
+  .navigation{
+  flex:3;
+  }
+  .profile{
+  
+  }nav ul li{
+      list-style:none;
+      text-decoration:none;
+  }
+  nav ul li a{
+      float:left;
+      color: black;
+      text-decoration: none;
+      margin:50px;
+  }
+  .portfolio{
+      display:flexbox;
+      align-items: center;
+      justify-content:center;
+      clear:both;
+      width:auto;
+      
+     
+      float:center;
+      margin:0 auto 20px auto;
+  }
+  .middle img{
+    
+     
+      background-image: url('/src/images/modesto.jpg');
+  }
+  .portfolio > a{
+      display:inline-flex;
+  }
+  .portfolio > h3{
+      display:flex;
+      justify-content:center;
+  
+  }
